# GridBot

./: README.md
backend/: Cargo.toml
backend/src/: cluster.rs  fpga.rs  gpu_ai.rs  latency.rs  main.rs  stat_arb.rs
config/: settings.toml
docker/: Dockerfile  docker-compose.yml
frontend/: index.html
